tests/base/invalid/For_CompileFail_1.whiley
import whiley.lang.*:*

void System::main([string] args):
    st = "Hello World"
    for st in args:
        this.out.println(st)
